# ros2_ws

./: .gitignore
src/arduinobot_msgs/: CMakeLists.txt
src/arduinobot_msgs/action/: MoveToPoint.action
src/arduinobot_remote/: CMakeLists.txt  package.xml
src/arduinobot_remote/arduinobot_remote/: task_server.py
src/arduinobot_remote/launch/: remote_interface.launch.py
src/arduinobot_remote/src/: gripper_action_server.cpp  moveit_action_server.cpp  task_server.cpp
src/articubot_core/: CMakeLists.txt  package.xml
src/articubot_core/src/: innobot_node.cpp
src/articubot_gripper/: CMakeLists.txt  package.xml
src/articubot_gripper/gripper/: gripper_control.py
src/articubot_gripper/src/: arm_action_server.cpp  gripper_action_server.cpp
src/articubot_moveit/: CMakeLists.txt  package.xml
src/articubot_moveit/config/: articubot.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit1.rviz  moveit_controllers.yaml
src/articubot_moveit/launch/: moveit.launch.py
src/articubot_one/: README.md
src/articubot_one/config/: articubot.srdf  kinematics.yaml  main.rviz  mapper_params_online_async.yaml  moveit1.rviz  my_controllers.yaml  nav2_params.yaml  ompl_planning.yaml
src/articubot_one/description/: arm_robot.xacro  camera.xacro  depth_camera.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/articubot_one/launch/: ball_tracker.launch.py  joystick.launch.py  launch_robot.launch.py
src/articubot_recognition/: CMakeLists.txt  package.xml
src/articubot_recognition/launch/: launch_yolov8.launch.py
src/articubot_recognition/scripts/: app.py  labels.pickle  mobilenetssd.py  tflite_reg.py  yolo_ros2_depth_test.py  yolov8_ros2_pt.py  yolov8_ros2_subscriber.py
src/articubot_recognition/scripts/Facerec_QT/: .gitignore  UI.py  face_rec.py  main.py  test_1.py  test_2.py  test_face.py
src/articubot_recognition/scripts/Facerec_QT/face_rec_models/: inference_model_993.tflite
src/articubot_recognition/scripts/MiAI_MobileNetSSD_Pi/: mobilenetssd.py
src/articubot_recognition/scripts/model/keypoint_classifier/: keypoint_classifier.py
src/articubot_recognition/scripts/model/point_history_classifier/: point_history_classifier.py
src/articubot_remote/: CMakeLists.txt  package.xml
src/articubot_remote/articubot_remote/: alexa_interface.py  move_to_point_action_server.py  pnp_client.py  task_server.py  test.py
src/articubot_remote/launch/: remote_interface.launch.py
src/articubot_remote/src/: innobot_node.cpp  move_to_point_action_server.cpp  moveit_action_server.cpp  pick_and_place_node.cpp  pick_n_place_node.cpp  task_server.cpp
src/articubot_utils/: CMakeLists.txt  package.xml
src/ball_tracker/ball_tracker/: follow_ball.py
src/diffdrive_arduino/: CMakeLists.txt
src/diffdrive_arduino/controllers/: robot_controller_example.yaml
src/diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.h  arm.h  diffdrive_arduino.h  wheel.h
src/diffdrive_arduino/src/: arduino_comms.cpp  arm.cpp  diffdrive_arduino.cpp
src/follow_human/: package.xml  setup.cfg  setup.py
src/innobot_core/src/: innobot_node.cpp
src/ldlidar_stl_ros2/launch/: ld06.launch.py
src/yolobot_recognition/scripts/: yolov8_ros2_pt.py  yolov8_ros2_subscriber.py
